--- a/manual/templates/manual/subsection_detail.html
+++ b/manual/templates/manual/subsection_detail.html
@@ -16,16 +16,22 @@
 
 <div class="mt-5">
     <h3>Comments</h3>
-    <ul class="list-group mb-3">
-        {% for comment in comments %}
-        <li class="list-group-item">{{ comment.user.username }}: {{ comment.content }}</li>
-        {% endfor %}
-    </ul>
+    {% if comments.exists %}
+        <ul class="list-group mb-3">
+            {% for comment in comments %}
+            <li class="list-group-item">{{ comment.content }} - <em>{{ comment.user.username }}</em> on {{ comment.created_at }}</li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No comments yet.</p>
+    {% endif %}
+
+    <h3>Add a Comment</h3>
     <form method="post">
         {% csrf_token %}
         <div class="mb-3">
-            <label for="comment" class="form-label">Add a Comment</label>
-            <textarea class="form-control" id="comment" rows="3" required></textarea>
+            {{ form.content.label_tag }}  <!-- Label for the textarea -->
+            {{ form.content }}  <!-- Textarea field -->
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
