--- a/manual/templates/manual/subsection_detail.html
+++ b/manual/templates/manual/subsection_detail.html
@@ -14,14 +14,15 @@
     <p>{{ subsection.content|safe }}</p>
 </div>
 
+<!-- Comments section !-->
 <div class="mt-5">
-    <h3>Comments</h3>
+    <h3>Comments ({{ comment_count }})</h3>
     {% if comments.exists %}
         <ul class="list-group mb-3">
             {% for comment in comments %}
             <li class="list-group-item">
-                {{ comment.content }} - <em>{{ comment.user.username }}</em> on {{ comment.created_at }}
-                {% if comment.user == request.user %}
+                <strong>{{ comment.user.first_name }}</strong>: {{ comment.content }} -  on {{ comment.created_at }}
+                {% if user == comment.user %}
                     <div class="btn-group float-end" role="group">
                         <a href="{% url 'edit_comment' comment.id %}" class="btn btn-secondary btn-sm">Edit</a>
                         <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger btn-sm">Delete</a>
@@ -35,12 +36,20 @@
     {% endif %}
 
     <h3>Do you have any constructive feedback?</h3>
-    <form method="post">
-        {% csrf_token %}
-        <div class="mb-3">
-            {{ form.content }}  <!-- Textarea field -->
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    {% if user.is_authenticated %}
+            {% if not email_verified %}
+                <p>Please verify your email to leave a comment. <a href="{% url 'account_email' %}">Request verification</a></p>
+            {% elif not user.is_approved %}
+                <p>Please wait for admin approval to be able to comment on content.</p>
+            {% else %}
+                <form class="mt-3" method="post" action="{% url 'add_comment' subsection.id %}">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            {% endif %}
+        {% else %}
+            <p><a href="{% url 'account_login' %}">Log in</a> to leave a comment.</p>
+        {% endif %}
 </div>
 {% endblock %}
