--- a/manual/templates/manual/section_list.html
+++ b/manual/templates/manual/section_list.html
@@ -20,6 +20,11 @@
             </h2>
             <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#sectionsAccordion">
                 <div class="accordion-body">
+                    <div class="mt-3">
+                        <a href="{% url 'add_favourite' 'section' section.id %}" class="btn btn-outline-primary">
+                            {% if section.id in favourite_sections %}Remove from Favorites{% else %}Add to Favorites{% endif %}
+                        </a>
+                    </div>
                     <p>{{ section.description|safe }}</p>
                     {% if section.subsections %}
                         <a href="{% url 'subsection_list' section.id %}" class="btn btn-primary">View Subsections</a>
