feat: implements user dashboard for overview of favourite topics and comments

--- a/interactions/templates/interactions/favourites_list.html
+++ b/interactions/templates/interactions/favourites_list.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}My Favorites - Zinc-Flake Coatings Manual{% endblock %}
+{% block title %}My Favourites - Zinc-Flake Coatings Manual{% endblock %}
 {% block content %}
 <main class="container mt-5">
     <div class="content-section">
-        <h2>My Favorites</h2>
-        <h3>Section Favorites</h3>
+        <h2>My Favourites</h2>
+        <h3>Section Favourites</h3>
         <ul class="list-group">
             {% for favourite in favourite_sections %}
             <li class="list-group-item">
@@ -13,7 +13,7 @@
             </li>
             {% endfor %}
         </ul>
-        <h3>Subsection Favorites</h3>
+        <h3>Subsection Favourites</h3>
         <ul class="list-group">
             {% for favourite in favourite_subsections %}
             <li class="list-group-item">
