--- a/manual/templates/manual/section_list.html
+++ b/manual/templates/manual/section_list.html
@@ -22,12 +22,12 @@
                 <div class="accordion-body">
                     <div class="mt-3">
                         <a href="{% url 'add_favourite' 'section' section.id %}" class="btn btn-outline-primary">
-                            {% if section.id in favourite_sections %}Remove from Favorites{% else %}Add to Favorites{% endif %}
+                            {% if section.id in favourite_sections %}Remove from Favourites{% else %}Add to Favourites{% endif %}
                         </a>
                     </div>
                     <p>{{ section.description|safe }}</p>
                     {% if section.subsections %}
-                        <a href="{% url 'subsection_list' section.id %}" class="btn btn-primary">View Subsections</a>
+                        <a href="{% url 'subsection_detail' section.id %}" class="btn btn-primary">View Details</a>
                     {% endif %}
                     <ul class="list-group">
                         {% for subsection in section.subsections %}
