--- a/manual/templates/manual/subsection_detail.html
+++ b/manual/templates/manual/subsection_detail.html
@@ -13,7 +13,7 @@
     <h2>{{ subsection.title }}</h2>
     <div class="mt-3">
         <a href="{% url 'add_favourite' 'subsection' subsection.id %}" class="btn btn-outline-primary">
-            {% if is_favourite_subsection %}Remove from Favorites{% else %}Add to Favorites{% endif %}
+            {% if is_favourite_subsection %}Remove from Favourites{% else %}Add to Favourites{% endif %}
         </a>
     </div>
     <p>{{ subsection.content|safe }}</p>
