--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -112,3 +112,42 @@ footer a {
 footer a:hover {
     text-decoration: underline;
 }
+
+/* Search bar styling */
+.search-bar {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
+.search-bar input[type="search"] {
+    width: 90%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+@media (max-width: 768px) {
+    .search-bar input[type="search"] {
+        width: 90%;
+        padding: 10px;
+    }
+}
+
+/* Search Results styling */
+.search-results {
+    list-style-type: none;
+    padding: 0;
+}
+
+.search-result-item {
+    border-bottom: 1px solid #ccc;
+    padding: 15px 0;
+}
+
+.search-result-item p {
+    margin: 10px 0;
+}
+
+.search-result-item mark {
+    background-color: yellow;
+    font-weight: bold;
+}
