--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,6 +3,14 @@
 /* Root font size for scalability */
 :root {
     font-size: 16px; /* This can be adjusted for scaling */
+    font-family: 'Circular', sans-serif;
+    --primary-color: #000000; /* Primary black */
+    --secondary-color: #FFFFFF; /* Primary white */
+    --highlight-color: #FF4610; /* Secondary highlight color */
+    --light-gray: #CBCBCB; /* Secondary light gray */
+    --medium-gray: #D6D6D6; /* Tertiary medium gray */
+    --lightest-gray: #DFDFDF; /* Tertiary lightest gray */
+    --background-gray: #F5F5F5; /* Background light gray */
 }
 
 /* Basic body and layout styles */
@@ -15,12 +23,39 @@ body {
 
 /* Footer should always be at the bottom */
 footer {
-    margin-top: auto;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    margin-top: auto !important;
+}
+
+footer a {
+    color: var(--secondary-color);
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+/* Navbar styles */
+.navbar {
+    background-color: var(--primary-color) !important;
+}
+
+.navbar-brand img {
+    height:30px;
+}
+
+.nav-link {
+    color: var(--secondary-color) !important;
+}
+
+.nav-link:hover {
+    color: var(--highlight-color) !important;
 }
 
 /* Custom navbar-toggler-icon */
 .navbar-toggler-icon {
-    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"%3E%3Cpath stroke="rgba%28255, 255, 255, 0.5%29" stroke-width="2" linecap="round" linejoin="round" d="M4 7h22M4 15h22M4 23h22"/%3E%3C/svg%3E');
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"%3E%3Cpath stroke="rgba(255, 255, 255, 1)" stroke-width="2" linecap="round" linejoin="round" d="M4 7h22M4 15h22M4 23h22"/%3E%3C/svg%3E');
 }
 
 /* Responsive text-center for navbar items on small screens */
@@ -34,9 +69,34 @@ footer {
 }
 
 /* General font size settings for various elements */
-.navbar-brand, .nav-link, .btn-link, .btn-outline-primary, .display-4, .lead, .btn-primary, .btn-lg {
+.navbar-brand, .nav-link, .btn-link, .display-4, .lead, .btn-lg {
     font-size: 1rem; /* Adjust based on design needs */
 }
+
+.btn-primary {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+    color: var(--secondary-color);
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+    background-color: var(--highlight-color);
+    border-color: var(--highlight-color);
+    color: var(--secondary-color);
+}
+
+.btn-outline-primary {
+    background-color: var(--secondary-color);
+    border-color: var(--primary-color);
+    color: var(--primary-color);
+}
+
+.btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+    color: var(--secondary-color);
+}
+
 
 .form-control, .d-flex .btn {
     font-size: 1rem; /* Ensures consistency */
@@ -60,7 +120,7 @@ footer {
 }
 
 .breadcrumb-item a {
-    color: #007bff;
+    color: var(--highlight-color);
     text-decoration: none;
 }
 
@@ -81,7 +141,7 @@ footer {
 
 .manual-index-link a {
     font-weight: bold;
-    color: #007bff;
+    color: var(--highlight-color);
     text-decoration: none;
 }
 
@@ -99,19 +159,8 @@ footer {
 }
 
 /* Footer styling */
-footer {
-    background-color: #343a40;
-    color: white;
-}
 
-footer a {
-    color: #6c757d;
-    text-decoration: none;
-}
 
-footer a:hover {
-    text-decoration: underline;
-}
 
 /* Search bar styling */
 .search-bar {
