--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -168,15 +168,31 @@ footer a:hover {
     justify-content: center;
     padding: 10px 0;
 }
-.search-bar input[type="search"] {
-    width: 90%;
+.search-bar form {
+    width: 100%;
+    max-width: 400px;
+}
+.search-bar form input[type="search"] {
+    width: 100%;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+/* Target the clear button in WebKit browsers */
+.search-bar input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 10px;
+    width: 10px;
+    background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14" width="14" height="14"><path stroke="%23FF4610" stroke-width="2" d="M1 1l12 12M13 1L1 13"/></svg>') no-repeat center center;
+    cursor: pointer;
 }
 @media (max-width: 768px) {
-    .search-bar input[type="search"] {
-        width: 90%;
+    .search-bar {
+        padding: 10px 12px;
+    }
+    .search-bar form input[type="search"] {
+        width: 100%;
         padding: 10px;
     }
 }
@@ -197,6 +213,7 @@ footer a:hover {
 }
 
 .search-result-item mark {
-    background-color: yellow;
+    background-color: var(--highlight-color);
+    opacity: 85%;
     font-weight: bold;
 }
