--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,11 +1,43 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<div class="jumbotron">
-    <h1 class="display-4">Welcome to the Zinc-Flake Coatings Manual</h1>
-    <p class="lead">Your comprehensive guide to understanding and applying zinc-flake coatings.</p>
-    <hr class="my-4">
-    <p>Browse through our sections to find detailed information and guidelines.</p>
-    <a class="btn btn-primary btn-lg" href="{% url 'section_list' %}" role="button">Learn more</a>
-</div>
+<section class="intro text-center">
+    <h1>Welcome to ZNFL-Coatings Application Manual</h1>
+    <p>Explore the comprehensive guide to ZNFL-Coatings application process.</p>
+</section>
+<section class="chapters mt-5">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card mb-4" data-bs-toggle="modal" data-bs-target="#introductionModal">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <div class="icon"><i class="fas fa-book-open"></i></div>
+                    <h5 class="card-title">Introduction</h5>
+                    <p class="card-text">Chapter 1: Introduction to ZNFL-Coatings.</p>
+                    <button class="btn btn-primary btn-learn-more" data-bs-toggle="modal" data-bs-target="#introductionModal">Learn More</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4" data-bs-toggle="modal" data-bs-target="#guidelinesModal">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <div class="icon"><i class="fas fa-tasks"></i></div>
+                    <h5 class="card-title">Guidelines</h5>
+                    <p class="card-text">Chapter 2: Guidelines for application.</p>
+                    <button class="btn btn-primary btn-learn-more" data-bs-toggle="modal" data-bs-target="#guidelinesModal">Learn More</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4" data-bs-toggle="modal" data-bs-target="#productInfoModal">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <div class="icon"><i class="fas fa-info-circle"></i></div>
+                    <h5 class="card-title">Product Information</h5>
+                    <p class="card-text">Chapter 3: Detailed product information.</p>
+                    <button class="btn btn-primary btn-learn-more" data-bs-toggle="modal" data-bs-target="#productInfoModal">Learn More</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
