--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,7 +3,7 @@
 /* Root font size for scalability */
 :root {
     font-size: 16px; /* This can be adjusted for scaling */
-    font-family: 'Circular', sans-serif;
+    font-family: 'Roboto', sans-serif;
     --primary-color: #000000; /* Primary black */
     --secondary-color: #FFFFFF; /* Primary white */
     --highlight-color: #FF4610; /* Secondary highlight color */
@@ -19,10 +19,11 @@ body {
     flex-direction: column;
     min-height: 100vh;
     font-size: 1rem; /* 16px */
+    font-family: 'Roboto', sans-serif; /* Ensure Roboto is used */
 }
 
 /* Footer should always be at the bottom */
-footer {
+.d-flex.flex-column.min-vh-100 footer {
     background-color: var(--primary-color);
     color: var(--secondary-color);
     margin-top: auto !important;
@@ -97,6 +98,108 @@ footer a:hover {
     color: var(--secondary-color);
 }
 
+/* Styles for the home page */
+.intro {
+    background-image: url('/static/images/hero.png');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    color: var(--secondary-color);
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 2rem;
+    border-radius: 0.5rem;
+}
+.intro::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.intro h1, .intro p {
+    z-index: 3;
+    background: rgba(0, 0, 0, 0.70); /* Semi-transparent background */
+    padding: 10px 20px;
+}
+.intro h1 {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.intro p {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+@media (max-width: 1024px) {
+    .intro {
+        background-image: url('/static/images/hero_tablet.png');
+    }
+    .intro h1 {
+        font-size: 1.5em;
+    }
+
+    .intro p {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 768px) {
+    .intro {
+        background-image: url('/static/images/hero_mobile.png');
+    }
+    .intro h1 {
+        font-size: 1.2em;
+    }
+
+    .intro p {
+        font-size: 0.9em;
+    }
+}
+
+.card {
+    border: none;
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    text-align: center;
+    height: 300px; /* Ensures consistent height */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card .icon {
+    font-size: 3rem;
+    color: var(--primary-color);
+    margin-bottom: 1rem;
+}
+
+.card-title {
+    color: var(--primary-color);
+}
+
+.card-text {
+    color: #6c757d;
+    flex-grow: 1;
+}
+
+.card-footer {
+    background: none;
+    border-top: none;
+    padding-top: 0;
+}
+
+.btn-learn-more {
+    margin-top: auto;
+}
 
 .form-control, .d-flex .btn {
     font-size: 1rem; /* Ensures consistency */
