--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     <!-- Other head content... -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link href="https://fonts.googleapis.com/css2?family=Circular:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     {% block extra_css %}
     {% endblock %}
 </head>
@@ -21,6 +23,7 @@
             <div class="container">
                 <a class="navbar-brand" href="{% url 'home' %}">
                     <img src="{% static 'images/doerken_RGB_white.svg' %}" alt="Zinc-Flake Coatings Manual Logo" height="40">
+                    <img src="{% static 'images/Industrial Coatings_Icon.png' %}" alt="Zinc-Flake Coatings Manual Logo" alt="Industrial coatings logo" height="40" class="ms-2">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -73,13 +76,13 @@
         {% endif %}
         
         <!-- Main Content -->
-        <div class="container mt-3">
+        <main class="container mt-3">
             {% block content %}
             {% endblock %}
-        </div>
+        </main>
         
         <!-- Footer -->
-        <footer class="p-3 mt-auto">
+        <footer class="p-3">
             <div class="container text-center">
                 <p>&copy; 2024 Zinc-Flake Coatings Manual. All rights reserved.</p>
                 <p>
