--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,25 +21,18 @@ body {
     font-size: 1rem; /* 16px */
     font-family: 'Roboto', sans-serif; /* Ensure Roboto is used */
 }
-
-/* Footer should always be at the bottom */
-.d-flex.flex-column.min-vh-100 footer {
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
-    margin-top: auto !important;
+.container {
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
-footer a {
-    color: var(--secondary-color);
-    text-decoration: none;
-}
-
-footer a:hover {
-    text-decoration: underline;
-}
 /* Navbar styles */
 .navbar {
     background-color: var(--primary-color) !important;
+    position: sticky;
+    top: 0;
+    z-index: 1030;
 }
 
 .navbar-brand img {
@@ -67,6 +60,83 @@ footer a:hover {
     .navbar-nav .nav-item {
         margin-bottom: 0.5rem;
     }
+}
+
+/* Search bar styling */
+.search-bar {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
+.search-form {
+    width: 100%;
+    max-width: 416px;
+    position:sticky;
+    top: 56px;
+    z-index: 1029;
+    background-color: var(--background-gray);
+}
+.search-form input[type="search"] {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid var(--primary-color);
+    box-sizing: border-box;
+}
+/* Target the clear button in WebKit browsers */
+.search-bar input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 10px;
+    width: 10px;
+    background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14" width="14" height="14"><path stroke="%23FF4610" stroke-width="2" d="M1 1l12 12M13 1L1 13"/></svg>') no-repeat center center;
+    cursor: pointer;
+}
+@media (max-width: 768px) {
+    .search-bar {
+        padding: 10px 12px;
+    }
+    .search-bar form input[type="search"] {
+        width: 100%;
+        padding: 10px;
+    }
+}
+
+/* Search Results styling */
+.search-results {
+    list-style-type: none;
+    padding: 0;
+}
+
+.search-result-item {
+    border-bottom: 1px solid #ccc;
+    padding: 15px 0;
+}
+
+.search-result-item p {
+    margin: 10px 0;
+}
+
+.search-result-item mark {
+    background-color: var(--highlight-color);
+    opacity: 85%;
+    font-weight: bold;
+}
+
+/* Footer styling */
+/* Footer should always be at the bottom */
+.d-flex.flex-column.min-vh-100 footer {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    margin-top: auto !important;
+}
+
+footer a {
+    color: var(--secondary-color);
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
 
 /* General font size settings for various elements */
@@ -125,17 +195,20 @@ footer a:hover {
 }
 
 .intro h1, .intro p {
-    z-index: 3;
+    z-index: 2;
     background: rgba(0, 0, 0, 0.70); /* Semi-transparent background */
     padding: 10px 20px;
+    max-width: 90%;
 }
 .intro h1 {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    font-size: 4vh;
 }
 .intro p {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    font-size: 2vh;
 }
 
 @media (max-width: 1024px) {
@@ -143,11 +216,11 @@ footer a:hover {
         background-image: url('/static/images/hero_tablet.png');
     }
     .intro h1 {
-        font-size: 1.5em;
+        font-size: 3vh;
     }
 
     .intro p {
-        font-size: 1em;
+        font-size: 1.5vh;
     }
 }
 
@@ -156,11 +229,11 @@ footer a:hover {
         background-image: url('/static/images/hero_mobile.png');
     }
     .intro h1 {
-        font-size: 1.2em;
+        font-size: 2.5vh;
     }
 
     .intro p {
-        font-size: 0.9em;
+        font-size: 1.2vh;
     }
 }
 
@@ -170,25 +243,48 @@ footer a:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     text-align: center;
-    height: 300px; /* Ensures consistent height */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 15rem;
 }
 
 .card .icon {
     font-size: 3rem;
-    color: var(--primary-color);
-    margin-bottom: 1rem;
 }
+
+.icon {
+    color: var(--primary-color);
+    margin-bottom: 0.1rem;
+}
+.icon:hover{
+    color: var(--highlight-color);
+}
+
+.social-icon {
+    color: var(--secondary-color);
+    padding: 0.25rem;
+    text-decoration: none;
+}
+
+.social-icon:hover {
+    color: var(--highlight-color);
+    text-decoration: none;
+}
+
+
 
 .card-title {
     color: var(--primary-color);
+    margin-bottom: 0.1rem;
+}
+
+.card-body {
+    padding: 1rem;
 }
 
 .card-text {
-    color: #6c757d;
-    flex-grow: 1;
+    margin-bottom: 0.1rem;
 }
 
 .card-footer {
@@ -261,62 +357,3 @@ footer a:hover {
     color: #6c757d;
 }
 
-/* Footer styling */
-
-
-
-/* Search bar styling */
-.search-bar {
-    display: flex;
-    justify-content: center;
-    padding: 10px 0;
-}
-.search-bar form {
-    width: 100%;
-    max-width: 400px;
-}
-.search-bar form input[type="search"] {
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
-/* Target the clear button in WebKit browsers */
-.search-bar input[type="search"]::-webkit-search-cancel-button {
-    -webkit-appearance: none;
-    height: 10px;
-    width: 10px;
-    background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14" width="14" height="14"><path stroke="%23FF4610" stroke-width="2" d="M1 1l12 12M13 1L1 13"/></svg>') no-repeat center center;
-    cursor: pointer;
-}
-@media (max-width: 768px) {
-    .search-bar {
-        padding: 10px 12px;
-    }
-    .search-bar form input[type="search"] {
-        width: 100%;
-        padding: 10px;
-    }
-}
-
-/* Search Results styling */
-.search-results {
-    list-style-type: none;
-    padding: 0;
-}
-
-.search-result-item {
-    border-bottom: 1px solid #ccc;
-    padding: 15px 0;
-}
-
-.search-result-item p {
-    margin: 10px 0;
-}
-
-.search-result-item mark {
-    background-color: var(--highlight-color);
-    opacity: 85%;
-    font-weight: bold;
-}
