style: improves styling for application manual page

--- a/manual/templates/manual/intro.html
+++ b/manual/templates/manual/intro.html
@@ -18,16 +18,18 @@
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#introAccordion">
                 <div class="accordion-body">
                     <ul>
-                        <li><i class="fas fa-check highlight-icon"></i> Ständig überwachte hohe Qualität der ausschließlich in Deutschland entwickelten und gefertigten Beschichtungssysteme.</li>
-                        <li><i class="fas fa-check highlight-icon"></i> Langjährige Bewährtheit beim Einsatz in der Automobilindustrie und anderen Branchen.</li>
-                        <li><i class="fas fa-check highlight-icon"></i> Globale Verfügbarkeit.</li>
-                        <li><i class="fas fa-check highlight-icon"></i> Einsatz von modernen Managementsystemen.</li>
-                        <li><i class="fas fa-check highlight-icon"></i> Ein weltweit agierendes Netzwerk hoch engagierter und qualifizierter Beschichtungsunternehmen, deren hoher Qualitätsstandard durch regelmäßige Audits* nicht nur gewährleistet, sondern stetig verbessert wird.</li>
+                        <li><i class="fas fa-award highlight-icon"></i> Ständig überwachte hohe Qualität der ausschließlich in Deutschland entwickelten und gefertigten Beschichtungssysteme.</li>
+                        <li><i class="fas fa-industry highlight-icon"></i> Langjährige Bewährtheit beim Einsatz in der Automobilindustrie und anderen Branchen.</li>
+                        <li><i class="fas fa-globe highlight-icon"></i> Globale Verfügbarkeit.</li>
+                        <li><i class="fas fa-cogs highlight-icon"></i> Einsatz von modernen Managementsystemen.</li>
+                        <li class="highlight-item">
+                            <i class="fas fa-users highlight-icon"></i>
+                            Ein weltweit agierendes Netzwerk hoch engagierter und qualifizierter Beschichtungsunternehmen, deren hoher Qualitätsstandard durch regelmäßige Audits nicht nur gewährleistet, sondern stetig verbessert wird.</li>
                     </ul>
                 </div>
             </div>
         </div>
-        <p>*Ein wesentlicher Bestandteil dieser Audits ist dieses Anwendungshandbuch.</p>
+        <p class="footnote"><sup>*</sup>Ein wesentlicher Bestandteil dieser Audits ist dieses Anwendungshandbuch.</p>
         <p><strong>Das Handbuch enthält:</strong></p>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
