--- a/manual/templates/manual/section_list.html
+++ b/manual/templates/manual/section_list.html
@@ -3,41 +3,38 @@
 {% load custom_filters %}
 {% block title %}Sections{% endblock %}
 {% block extra_css %}
-    {% for section in sections %}
-        <link rel="stylesheet" href="{% static 'css/section_list/' %}{{ section.title|css_filename }}.css">
-    {% endfor %}
+<link rel="stylesheet" href="{% static 'css/content_css/section_list.css' %}">
 {% endblock %}
 {% block content %}
-<h2>Sections</h2>
-
-<div class="accordion" id="sectionsAccordion">
-    {% for section in sections %}
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="heading{{ forloop.counter }}">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapse{{ forloop.counter }}">
-                {{ section.title }}
-                </button>
-            </h2>
-            <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#sectionsAccordion">
-                <div class="accordion-body">
-                    <div class="mt-3">
-                        <a href="{% url 'add_favourite' 'section' section.id %}" class="btn btn-outline-primary">
-                            {% if section.id in favourite_sections %}Remove from Favourites{% else %}Add to Favourites{% endif %}
-                        </a>
-                    </div>
-                    <p>{{ section.description|safe }}</p>
-                    {% if section.subsections %}
-                        <a href="{% url 'subsection_list' section.id %}" class="btn btn-primary">View Details</a>
+<section class="content">
+    <h1 class="text-center">Sections</h1>
+    <div class="accordion" id="sectionsAccordion">
+        {% for section in sections %}
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading{{ forloop.counter }}">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapse{{ forloop.counter }}">
+                    {{ section.title }}
+                    <a href="{% url 'add_favourite' 'section' section.id %}" class="favourite-icon">
+                    {% if section.id in favourite_sections %}
+                        <i class="fas fa-star"></i>
+                    {% else %}
+                        <i class="far fa-star"></i>
                     {% endif %}
-                    <ul class="list-group">
-                        {% for subsection in section.subsections %}
-                            <br>
-                            <li class="list-group">{{ subsection.title }}</li>
-                        {% endfor %}
-                    </ul>
+                    </a>
+                    </button>
+                </h2>
+                <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#sectionsAccordion">
+                    <div class="accordion-body">
+                        <p>{{ section.description|safe }}</p>
+                        <ul class="list-group">
+                            {% for subsection in section.subsections %}
+                                <li class="list-group">{{ subsection.title }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    {% endfor %}
-</div>
+        {% endfor %}
+    </div>
+</section>
 {% endblock %}
