feat: adds a new template for section details and adjusts view logic for it

--- a/manual/templates/manual/intro.html
+++ b/manual/templates/manual/intro.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
 <section class="guidelines-content">
-    <h1 class="text-center">Einleitung</h1>
+    <h1>Einleitung</h1>
     <p>Seit rund 40 Jahren entwickelt und fertigt Dörken Mikroschicht-Korrosionsschutz-Systeme und ist heute europäischer Markt- und Technologieführer im Bereich der Chrom(VI)-freien Zinklamellensysteme. Dahinter steht eine nachhaltige Unternehmensstrategie, die sich auf, aus technologischer Sicht, gleich mehrere Erfolgsfaktoren stützt:</p>
     <div class="accordion" id="introAccordion">
         <div class="accordion-item">
