--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
         <!-- Footer -->
         <footer class="p-3">
             <div class="container text-center">
-                <p>&copy; 2024 Zinc-Flake Anwendungshandbuch. Alle Rechte vorbehalten.</p>
+                <p>&copy; 2024 Zinc-Flake Anwendungshandbuch.</p>
                 <p>
                     <a href="https://www.doerken.com/de/de/agb">AGB</a> |
                     <a href="https://www.doerken.com/de/de/impressum">Impressum</a> |
