--- a/manual/templates/manual/guidelines.html
+++ b/manual/templates/manual/guidelines.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
     <section class="guidelines-content">
-        <h1 class="text-center">Leitfaden</h1>
+        <h1>Leitfaden</h1>
         <p>Dörken liefert weltweit an ihre Kunden Produkte zur Herstellung von Mikro-Korrosionsschutz-Schichten.</p>
         <p>Um die gleichbleibende Qualität bei der Applikation und Handhabung sowie der eigentlichen Schutzwirkung bzw. Funktionen der Schichtsysteme sicherzustellen, müssen die Anwender über ein zertifiziertes Managementsystem verfügen. Mindestanforderung ist hier die DIN EN ISO 9001 in der aktuell gültigen Fassung.</p>
         <p>In Bezug auf die Handhabung und Applikation der Dörken-Produkte ist entsprechend des QM-Systems (Qualitätsmanagement) eine Überprüfung des Beschichtungsprozesses sowie aller vorbereitenden bzw. beteiligten Prozesse notwendig.</p>
