chore: prepares for deployment on heroku

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -3,8 +3,8 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 <section class="intro text-center">
-    <h1>Welcome to ZNFL-Coatings Application Manual</h1>
-    <p>Explore the comprehensive guide to ZNFL-Coatings application process.</p>
+    <h1>Znfl-Beschichtungs-Handbuch</h1>
+    <p>Erkunden Sie den umfassenden Leitfaden zum ZNFL-Beschichtungsprozess</p>
 </section>
 <section class="chapters mt-5">
     <div class="row">
