--- a/manual/templates/manual/subsection_list.html
+++ b/manual/templates/manual/subsection_list.html
@@ -1,69 +1,18 @@
-{% extends 'base.html' %}
+{% load static %}
 {% load custom_filters %}
-{% block title %}Subsections{% endblock %}
-{% block content %}
-<main>
-    <h2>Subsections of {{ section.title }}</h2>
-
-    {% if subsection_dict %}
-
-    <div class="accordion" id="subsectionsAccordion">
-        {% with subsection_dict|get_item:None as top_level_subsections %}
-            {% for subsection in top_level_subsections %}
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="heading{{ forloop.counter }}">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapse{{ forloop.counter }}">
-                        {{ subsection.title }}
-                    </button>
-                </h2>
-                <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#subsectionsAccordion">
-                    <div class="accordion-body">
-                        <div class="mt-3">
-                            {% if subsection.id %}
-                            <a href="{% url 'add_favourite' 'subsection' subsection.id %}" class="btn btn-outline-primary">
-                                {% if subsection.id in favourite_subsections %}Remove from Favourites{% else %}Add to Favourites{% endif %}
-                            </a>
-                            {% endif %}
-                        </div>
-                        <p>{{ subsection.content|safe }}</p>
-                        {% with subsection_dict|get_item:subsection.id as child_subsections %}
-                            {% if child_subsections %}
-                            <ul class="list-group">
-                                {% for child in child_subsections %}
-                                    <li class="list-group-item">
-                                        <strong>{{ child.title }}</strong>
-                                        <p>{{ child.content|safe }}</p>
-                                        <div class="mt-3">
-                                            {% if child.id %}
-                                            <a href="{% url 'add_favourite' 'subsection' child.id %}" class="btn btn-outline-primary">
-                                                {% if child.id in favourite_subsections %}Remove from Favourites{% else %}Add to Favourites{% endif %}
-                                            </a>
-                                            <a href="{% url 'subsection_detail' child.id %}" class="btn btn-primary">View Details</a>
-                                            {% endif %}
-                                        </div>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                            {% endif %}
-                        {% endwith %}
-                        <a href="{% url 'subsection_detail' subsection.id %}" class="btn btn-primary">View Details</a>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-        {% endwith %}
-    </div>
-
-    {% else %}
-
-    <div class="mt-3">
-        <p>{{ section.description|safe }}</p>
-        <a href="{% url 'add_favourite' 'section' section.id %}" class="btn btn-outline-primary">
-            {% if section.id in favourite_sections %}Remove from Favourites{% else %}Add to Favourites{% endif %}
-        </a>
-    </div>
-
-    {% endif %}
-
-</main>
-{% endblock %}
+<ul class="list-group">
+    {% for subsection in subsections %}
+        <li class="list-group-item">
+            <a href="{% url 'section_detail_accordion' subsection.id %}#subsection-{{ subsection.id }}">{{ subsection.title }}</a>
+            {% if subsection.subsections %}
+                <ul class="list-group">
+                    {% for subsubsection in subsection.subsections %}
+                        <li class="list-group-item">
+                            <a href="{% url 'section_detail_accordion' subsubsection.id %}#subsubsection-{{ subsubsection.id }}">{{ subsubsection.title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </li>
+    {% endfor %}
+</ul>
