--- a/manual/templates/manual/section_detail_accordion.html
+++ b/manual/templates/manual/section_detail_accordion.html
@@ -7,7 +7,15 @@
 {% block content %}
 <main class="content-container">
     <div class="container mt-5">
-        <h1>{{ section.title }}</h1>
+        <h1>{{ section.title }}
+            <a href="{% url 'add_favourite' 'section' section.id %}" class="favourite-icon">
+            {% if section.id in favourite_sections %}
+                <i class="fas fa-star"></i>
+            {% else %}
+                <i class="far fa-star"></i>
+            {% endif %}
+            </a>
+        </h1>
         <div class="section-description mb-4">
             {{ section.description|safe }}
         </div>
@@ -51,4 +59,49 @@
         </div>
     </div>
 </main>
+<section class="comment-container">
+    <!-- Comments section !-->
+    <div class="mt-5">
+        <div class="d-flex align-items-center mb-3">
+            <a href="{% url 'add_favourite' 'subsection' subsection.id %}" class="me-2">
+                <i class="fas fa-thumbs-up"></i> <span>{{ subsection.favourites.count }}</span>
+            </a>
+            <h3 class="m-0">Comments ({{ comment_count }})</h3>
+        </div>
+        {% if comments.exists %}
+            <ul class="list-group mb-3">
+                {% for comment in comments %}
+                <li class="list-group-item">
+                    <strong>{{ comment.user.first_name }}</strong>: {{ comment.content }} -  on {{ comment.created_at }}
+                    {% if user == comment.user %}
+                        <div class="btn-group float-end" role="group">
+                            <a href="{% url 'edit_comment' comment.id %}" class="btn btn-secondary btn-sm">Edit</a>
+                            <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger btn-sm">Delete</a>
+                        </div>
+                    {% endif %}
+                </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>No comments yet.</p>
+        {% endif %}
+
+        <h3>Do you have any constructive feedback?</h3>
+        {% if user.is_authenticated %}
+                {% if not email_verified %}
+                    <p>Please verify your email to leave a comment. <a href="{% url 'account_email' %}">Request verification</a></p>
+                {% elif not user.is_approved %}
+                    <p>Please wait for admin approval to be able to comment on content.</p>
+                {% else %}
+                    <form class="mt-3" method="post" action="{% url 'add_comment' subsection.id %}">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                {% endif %}
+            {% else %}
+                <p><a href="{% url 'account_login' %}">Log in</a> to leave a comment.</p>
+            {% endif %}
+    </div>
+</section>
 {% endblock %}
