--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -3,10 +3,10 @@
 {% block title %}Verify Your Email Address{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <h2>Verify Your Email Address</h2>
-    <p>We have sent you an email for verification. Follow the link provided to finalize the signup process.</p>
-    <p>If you do not see the verification email in your main inbox, check your spam folder.</p>
-    <p>If you do not receive the verification email within the next 15 minutes, please call us</p>
+<div class="container mt-3">
+    <h2>E-mail Adresse bestätigen</h2>
+    <p>Wir haben Ihnen eine E-Mail zur Überprüfung geschickt. Folgen Sie dem angegebenen Link, um den Anmeldevorgang abzuschließen.</p>
+    <p>Wenn Sie die Bestätigungs-E-Mail nicht in Ihrem Posteingang sehen, überprüfen Sie Ihren Spam-Ordner.</p>
+    <p>Wenn Sie die Bestätigungs-E-Mail nicht innerhalb der nächsten 15 Minuten erhalten, rufen Sie uns bitte an +49 175 4790220</p>
 </div>
 {% endblock %}
