--- a/interactions/templates/interactions/delete_comment.html
+++ b/interactions/templates/interactions/delete_comment.html
@@ -6,6 +6,6 @@
 <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Delete</button>
-    <a href="{% url 'subsection_detail' comment.subsection.id %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'section_detail_accordion' comment.section.id %}" class="btn btn-secondary">Cancel</a>
 </form>
 {% endblock %}
