--- a/manual/templates/manual/section_detail_accordion.html
+++ b/manual/templates/manual/section_detail_accordion.html
@@ -5,6 +5,13 @@
 <link rel="stylesheet" href="{%  static 'css/content_css/section_detail_accordion.css' %}">
 {% endblock %}
 {% block content %}
+<nav aria-label="breadcrumb">
+<ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'section_list' %}">Handbuch</a></li>
+    <li class="breadcrumb-item active" aria-current="page">{{ section.title }}</li>
+</ol>
+</nav>
 <main class="content-container">
     <div class="container mt-5">
         <h1>{{ section.title }}
@@ -61,47 +68,45 @@
 </main>
 <section class="comment-container">
     <!-- Comments section !-->
-    <div class="mt-5">
+    <div>
         <div class="d-flex align-items-center mb-3">
-            <a href="{% url 'add_favourite' 'subsection' subsection.id %}" class="me-2">
-                <i class="fas fa-thumbs-up"></i> <span>{{ subsection.favourites.count }}</span>
-            </a>
-            <h3 class="m-0">Comments ({{ comment_count }})</h3>
+            <h3 class="m-0">Kommentare ({{ comment_count }})</h3>
         </div>
         {% if comments.exists %}
             <ul class="list-group mb-3">
                 {% for comment in comments %}
                 <li class="list-group-item">
-                    <strong>{{ comment.user.first_name }}</strong>: {{ comment.content }} -  on {{ comment.created_at }}
+                    <strong>{{ comment.user.first_name }}</strong>: {{ comment.content }} - on {{ comment.created_at }}
                     {% if user == comment.user %}
                         <div class="btn-group float-end" role="group">
-                            <a href="{% url 'edit_comment' comment.id %}" class="btn btn-secondary btn-sm">Edit</a>
-                            <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger btn-sm">Delete</a>
+                            <a href="{% url 'edit_section_comment' comment.id %}" class="btn btn-secondary btn-sm">Edit</a>
+                            <a href="{% url 'delete_section_comment' comment.id %}" class="btn btn-danger btn-sm">Delete</a>
                         </div>
                     {% endif %}
                 </li>
                 {% endfor %}
             </ul>
         {% else %}
-            <p>No comments yet.</p>
+            <p>Noch keine Kommentare.</p>
         {% endif %}
 
-        <h3>Do you have any constructive feedback?</h3>
+        <h3>Haben Sie ein konstruktives Feedback?</h3>
         {% if user.is_authenticated %}
-                {% if not email_verified %}
-                    <p>Please verify your email to leave a comment. <a href="{% url 'account_email' %}">Request verification</a></p>
-                {% elif not user.is_approved %}
-                    <p>Please wait for admin approval to be able to comment on content.</p>
-                {% else %}
-                    <form class="mt-3" method="post" action="{% url 'add_comment' subsection.id %}">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                {% endif %}
+            {% if not email_verified %}
+                <p>Please verify your email to leave a comment. <a href="{% url 'account_email' %}">Request verification</a></p>
+            {% elif not user.is_approved %}
+                <p>Please wait for admin approval to be able to comment on content.</p>
             {% else %}
-                <p><a href="{% url 'account_login' %}">Log in</a> to leave a comment.</p>
+                <form class="mt-3" method="post" action="{% url 'add_comment_to_section' section.id %}">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-primary">Kommentar abschicken</button>
+                </form>
             {% endif %}
+        {% else %}
+            <p><a href="{% url 'account_login' %}?next={{ request.path }}">Log in</a> to leave a comment.</p>
+        {% endif %}
     </div>
 </section>
+
 {% endblock %}
