--- a/static/css/content_css/section_detail_accordion.css
+++ b/static/css/content_css/section_detail_accordion.css
@@ -143,3 +143,261 @@ ul.checklist li, ol.steps li {
     background-color: #f0f0f0;
     border-bottom: 1px solid #ddd;
 }
+
+
+/* Root font size for scalability */
+:root {
+    font-size: 16px; /* This can be adjusted for scaling */
+    font-family: 'Roboto', sans-serif;
+    --primary-color: #000000; /* Primary black */
+    --secondary-color: #FFFFFF; /* Primary white */
+    --highlight-color: #FF4610; /* Secondary highlight color */
+    --light-gray: #CBCBCB; /* Secondary light gray */
+    --medium-gray: #D6D6D6; /* Tertiary medium gray */
+    --lightest-gray: #DFDFDF; /* Tertiary lightest gray */
+    --background-gray: #F5F5F5; /* Background light gray */
+}
+
+.container {
+    padding: 15px;
+}
+
+.section-description {
+    font-style: italic;
+    margin-bottom: 1rem;
+    color: var(--primary-color);
+    font-size: 1rem;
+}
+
+.blockquote {
+    font-style: normal;
+    margin: 1rem 0;
+    padding: 0.5rem 1rem;
+    border-left: 5px solid var(--highlight-color);
+    color: var(--primary-color);
+    background-color: var(--background-gray);
+}
+
+
+.section-description ul {
+    margin-top: 1rem;
+    padding-left: 40px;
+    list-style-type: disc;
+}
+
+.subsection-body {
+    margin-top: 1rem;
+    color: var(--primary-color);
+    font-size: 1rem;
+}
+
+.table-responsive {
+    margin-bottom: 1rem;
+}
+
+.table-custom {
+    border-collapse: collapse;
+    width: 100%;
+    background-color: var(--secondary-color);
+}
+
+.table-custom th, .table-custom td {
+    border: 1px solid var(--light-gray);
+    padding: 0.75rem;
+    text-align: left;
+    vertical-align: top;
+    color: var(--primary-color);
+    font-size: 1rem;
+}
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+.img-fluid-small {
+    max-width: 30%;
+    height: auto;
+    display: inline;
+}
+
+/* New classes for floating images */
+.img-float {
+    margin: 0.5rem;
+}
+
+.float-lg-left {
+    float: none;
+}
+
+.float-lg-right {
+    float: none;
+}
+.float-lg-right-big {
+    float: none;
+}
+
+@media (min-width: 992px) {
+    .float-lg-right {
+        float: right;
+        max-width: 30%;
+        margin-right: 1rem;
+    }
+    .float-lg-right-big {
+        float: right;
+        max-width: 100%;
+        margin-right: 1rem;
+    }
+    .float-lg-left {
+        float: left;
+        max-width: 30%;
+        margin-right: 1rem;
+    }
+
+    .img-float-container {
+        overflow: hidden;
+    }
+}
+
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Center align images */
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
+    max-height: 200px; /* Limit height for smaller images */
+    object-fit: contain; /* Maintain aspect ratio without cropping */
+}
+
+/* New class for framed images */
+.frame {
+    border: 1px solid var(--medium-gray);
+    border-radius: 8px; /* Adjust the roundness */
+    overflow: hidden;
+    padding: 8px; /* Padding within the frame */
+    background-color: var(--lightest-gray);
+    text-align: center; /* Center the image within the frame */
+}
+
+@media (max-width: 767px) {
+    .image-container {
+        justify-content: flex-start; /* Start align images on mobile */
+    }
+
+    .image-container img {
+        width: 100%; /* Ensure images take full width of container */
+        max-width: 100%; /* Reset max-width for mobile devices */
+        max-height: 100px; /* Reset max-height for mobile devices */
+    }
+
+    .section-description,
+    .subsection-body,
+    .table-custom th,
+    .table-custom td {
+        font-size: 0.9rem;
+    }
+
+    .table-custom th, .table-custom td {
+        padding: 0.5rem;
+    }
+    .img-float-wrapper {
+        width: 100%;
+        float: none;
+        margin-right: 0;
+        margin-bottom: 1rem;
+    }
+    .img-side-by-side {
+        flex-direction: column;
+    }
+
+    .img-side-by-side figure {
+        width: 100%;
+        margin: 0.5rem 0;
+    }
+
+    .img-side-by-side img {
+        max-height: auto; /* Reset height for mobile view */
+    }
+}
+
+@media (max-width: 576px) {
+    .section-description,
+    .subsection-body,
+    .table-custom th,
+    .table-custom td {
+        font-size: 0.8rem;
+    }
+
+    .table-custom th, .table-custom td {
+        padding: 0.3rem;
+    }
+}
+
+.alert-custom {
+    padding: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    background-color: var(--highlight-color);
+    color: var(--secondary-color);
+}
+
+.alert-custom strong {
+    font-weight: bold;
+}
+
+.math-accordion-body {
+    overflow-x: auto;
+}
+
+/* New classes to ensure text wraps around images on large screens */
+.img-float-wrapper {
+    float: right;
+    width: 10%;
+    margin-right: 1rem;
+}
+
+.img-float-frame {
+    width: 100%;
+    border: 1px solid var(--medium-gray);
+    border-radius: 8px;
+    padding: 8px;
+    background-color: var(--lightest-gray);
+
+}
+
+/* New class for side-by-side images */
+.img-side-by-side {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.img-side-by-side figure {
+    flex: 1 1 45%; /* Each image takes up to 45% of the container's width */
+    margin: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-side-by-side img {
+    max-height: 150px; /* Adjust the height as needed */
+    object-fit: contain; /* Maintain aspect ratio and ensure the image fits within the height */
+    width: 100%; /* Ensure the image takes the full width of the container */
+    border: 1px solid var(--medium-gray);
+    border-radius: 8px;
+    padding: 8px;
+    background-color: var(--lightest-gray);
+}
+
+.img-float-frame figcaption {
+    max-width: 100%; /* Ensure the caption takes the full width of the container */
+    text-align: center;
+    font-size: 0.9rem;
+    color: var(--primary-color);
+}
