--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -3,12 +3,12 @@
 {% block head_title %}Confirm E-mail Address{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <h1>Confirm E-mail Address</h1>
-    <p>Click the button below to confirm your email address.</p>
+<div class="container mt-3">
+    <h1>E-mail Adresse bestätigen</h1>
+    <p>Klicken Sie auf die untere Button, um Ihre E-Mail Adresse zu bestätigen.</p>
     <form method="post" action="">
         {% csrf_token %}
-        <button type="submit">Confirm E-mail</button>
+        <button type="submit">E-mail bestätigen</button>
     </form>
 </div>
 {% endblock %}
