--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,14 +5,14 @@
 {% endblock head_title %}
 
 {% block content %}
-    <h1>Sign Out</h1>
-    <p>Are you sure you want to sign out?</p>
+    <h1>Ausloggen</h1>
+    <p>Sind Sie sicher, dass Sie sich abmelden wollen?</p>
     
     {% url 'account_logout' as action_url %}
     
     <form method="post" action="{{ action_url }}">
         {% csrf_token %}
         {{ redirect_field }}
-        <button type="submit">Sign Out</button>
+        <button type="submit">Abmelden</button>
     </form>
 {% endblock content %}
