--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -3,17 +3,17 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container mt-3">
     {% if form.errors %}
     <div class="alert alert-danger">
         {{ form.errors }}
     </div>
     {% endif %}
-    <h2>Sign Up</h2>
+    <h2>Anmelden</h2>
     <form method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Sign Up</button>
+        <button type="submit" class="btn btn-primary">Konto anlegen</button>
     </form>
 </div>
 {% endblock %}
